# akirobo

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
benches/: citrus_bench.rs  compare_movegen.rs  movegen.rs
src/: main.rs
src/bot/: akirobo.rs  board.rs  bot.rs  eval.rs  eval_frames.rs  matrix.rs  mod.rs  movement.rs  searchtree.rs
src/bot/evaluation/: default_eval.rs  depra_eval.rs  mod.rs
src/botris/: api_messages.rs  game_info.rs  main.rs  mod.rs  types.rs  websocket.rs
src/game/: eval.rs  frame.rs  matrix.rs  mod.rs  piece.rs
src/robo/: akirobo.rs  lib.rs  movegen.rs  searchtree.rs
src/robo/botris/: game_info.rs  mod.rs  types.rs
src/robo/evaluation/: default_eval.rs  mod.rs
src/robo/tetris_core/: engine.rs  frame.rs  matrix.rs  mod.rs  piece.rs  snapshot.rs
src/utils/: api_messages.rs  matrix.rs  mod.rs  types.rs  websocket.rs
