[package]
name = "akirobo"
version = "0.1.0"
edition = "2021"

[lib]
name = "robo"
path = "src/robo/lib.rs"

[[bin]]
name = "botris"
path = "src/botris/main.rs"

[[bench]]
name = "citrus_bench"
harness = false

[dependencies]
dotenv = "0.15.0"
futures-util = "0.3.30"
tokio = { version = "1.39.2", features = ["full"] }
tungstenite = { version = "0.26.2", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"
owo-colors = "4.2.0"
ordered-float = "5.0.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
